--- a/ui/src/app/view/header/header.component.html
+++ b/ui/src/app/view/header/header.component.html
@@ -11,16 +11,15 @@
             class="p-button-text p-button-secondary header__menuEntry" icon="pi pi-download">
     </p-button>
   </div>
-  <div class="p-col-1"></div>
-  <div class="p-col-2 header__menuLabel">
+  <div class="p-col-1 header__menuLabel">
     <span>{{ 'general.port.call' | translate }}</span>
   </div>
   <div class="p-col-1"></div>
-  <div class="p-col-2 header__menuLabel header__company_container">
+  <div class="p-col-4 header__menuLabel header__company_container">
     <span class="header__company">{{ 'general.company' | translate }}: {{ companyName }}</span>
     <span class="header__info_small">{{companyCodeType}}: {{companyId}}</span>
   </div>
-  <div class="p-col-1">
+  <div class="p-col-1 header__language">
     <p-dropdown styleClass="dropdown" (onChange)="changeLanguage($event)" [(ngModel)]="currentLanguage" [filter]="true"
                 [options]="availableLanguages" autofocus="true">
     </p-dropdown>
