--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -102,53 +102,53 @@
     </tr>
   </ng-template>
   <ng-template pTemplate="body" let-timestamp>
-    <tr>
+    <tr class="unreadTimestamp">
       <td pTooltip="Process ID: {{timestamp.processId}}" tooltipPosition="top"
           tooltipStyleClass="ToolTipClass" style="width: 3px;" [ngStyle] = "{'background-color': timestamp.sequenceColor}"></td>
-      <td  style="width: 8%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'timestampContent'">
+      <td  style="width: 8%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">
         <div>{{ (timestamp.vessel | vesselIdToVessel: vessels).name}}</div>
         <div class="rowDetails">{{ (timestamp.vessel | vesselIdToVessel: vessels).serviceNameCode}}</div>
       </td>
       <td style="width: 7%"
-          [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'timestampContent'">
+          [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">
         {{ timestamp.timestampType | portCallTimestampTypeToStringPipe: null }}
       </td>
-      <td style="width: 2%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'timestampContent'">
+      <td style="width: 2%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">
         {{ timestamp.callSequence + 1 }}
       </td>
-      <td style="width: 15%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'dateTimeStamp timestampContent'">
+      <td style="width: 15%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">
         {{timestamp.logOfTimestamp | timestampToTimezone: timestamp: ports}}
       </td>
-      <td style="width: 15%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'dateTimeStamp timestampContent'">
+      <td style="width: 15%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">
         {{timestamp.eventTimestamp | timestampToTimezone: timestamp: ports}}
       </td>
-      <td [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'timestampContent'"  style="width: 11%">
-        <div [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'timestampContent'">{{ (timestamp.portPrevious | portIdToPort: ports).unLocode}}</div>
+      <td [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">
+        <div [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">{{ (timestamp.portPrevious | portIdToPort: ports).unLocode}}</div>
         <div class="rowDetails">{{ (timestamp.portPrevious | portIdToPort: ports).name}}</div>
       </td>
-      <td [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'timestampContent'" style="width: 8%">
-        <div [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'timestampContent'">{{ (timestamp.portOfCall | portIdToPort: ports).unLocode}}</div>
+      <td [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  " style="width: 8%">
+        <div [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">{{ (timestamp.portOfCall | portIdToPort: ports).unLocode}}</div>
         <div class="rowDetails">{{ (timestamp.portOfCall | portIdToPort: ports).name}}</div>
       </td>
-      <td [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'timestampContent'" style="width: 7%">
-        <div [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'timestampContent'">{{ (timestamp.portNext | portIdToPort: ports).unLocode}}</div>
+      <td [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  " style="width: 7%">
+        <div [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">{{ (timestamp.portNext | portIdToPort: ports).unLocode}}</div>
         <div class="rowDetails">{{ (timestamp.portNext | portIdToPort: ports).name}}</div>
       </td>
-      <td style="width: 7%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'timestampContent'">{{ timestamp.direction }}</td>
-      <td style="width: 6%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'timestampContent'">
+      <td style="width: 7%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">{{ timestamp.direction }}</td>
+      <td style="width: 6%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">
         <!--   somehow there is a porblem acessing the terminals   -->
         <div *ngIf="terminals.length > 0">
           <div pTooltip="{{(timestamp.terminal | terminalIdToTerminal: terminals).terminalName}}" tooltipPosition="top"
                tooltipStyleClass="ToolTipClass">{{ (timestamp.terminal | terminalIdToTerminal: terminals).smdgCode}}</div>
         </div>
       </td>
-      <td style="width: 7%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'timestampContent'">{{ timestamp.locationId }}</td>
-      <td style="width: 7%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'timestampContent'">
+      <td style="width: 7%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">{{ timestamp.locationId }}</td>
+      <td style="width: 7%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">
         <p-button class="timestampContent" (onClick)="showComment(timestamp)"
                   icon="pi pi-comment">
         </p-button>
       </td>
-      <td style="width: 8%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'timestampContent'">
+      <td style="width: 8%" [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">
         <span *ngIf="timestamp.messageDirection != null" class="pi {{ timestamp.messageDirection == null ?
                   '' :
                   (timestamp.messageDirection == 'inbound' ?
@@ -173,7 +173,7 @@
               pTooltip="Commuinication status: {{ timestamp.messagingStatus }}<br/>Details: {{ timestamp.messagingDetails }}"
               [escape]="false" tooltipPosition="top" tooltipStyleClass="ToolTipClass"></span>
       </td>
-      <td [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : 'timestampContent'" style="width: 6%">
+      <td [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  " style="width: 6%">
         <p-button class="timestampContent" *ngIf="highestTimestampId == timestamp.id && timestamp.modifiable"
                   icon="pi pi-trash"
                   (click)="deleteTimestamp(timestamp)" pTooltip="{{ 'general.table.delete.tooltip' | translate }}" tooltipPosition="left"
