--- a/ui/src/app/view/app.component.html
+++ b/ui/src/app/view/app.component.html
@@ -4,28 +4,53 @@
   </div>
   <div class="main_spcerHeadlin"></div>
   <div class="main__spaceInnerComponent, main__spaceBetween" style=" min-width: 1200px">
-  <p-card >
-    <app-transport-calls-table></app-transport-calls-table>
-  </p-card>
-  </div>
-  <div class="main__spaceInnerComponent, main__spaceBetween" style=" min-width: 1200px">
-    <p-card>
-      <app-timestamp-table (timeStampDeletedNotifier)="timestampDeletedHandler($event)"
-                           (timeStampAcceptNotifier)="timestampRespondedHandler($event)"
-                           [vesselId]="vesselId"
-      ></app-timestamp-table>
-      <div class="stickyFooterDiv">
-        <app-timestamp-editor (timeStampAddedNotifier)="timeStampAddedHandler($event)"
-                              [portOfCall]="portOfCall"
-                              [vesselId]="vesselId" [vesselSavedId]="vesselSavedId">
-        </app-timestamp-editor>
-        <app-timestamp-paginator [portCallTimeStampAdded]="portCallTimeStampAdded"
-                                 [portCallTimeStampDeleted]="portCallTimeStampDeleted"
-                                 [portCallTimeStampResponded] ="portCallTimeStampResponded"
-                                 [portOfCall]="portOfCall"
-                                 [vesselId]="vesselId">
-        </app-timestamp-paginator>
-      </div>
-    </p-card>
+
+    <div class="main__cards">
+      <app-schedule-selector class="rightSpace fullWidthAndHeight"></app-schedule-selector>
+      <app-port-of-call class="rightSpace fullWidthAndHeight"
+                        (portOfCallNotifier)="portOfCallChangedHandler($event)"></app-port-of-call>
+      <app-vessel class="fullWidthAndHeight" (vesselNotifier)="vesselChangedHandler($event)"
+                  (vesselSavedNotifier)="vesselSavedHandler($event)"></app-vessel>
+
+    </div>
+    <div class="main__content">
+      <p-splitter [style]="{'height': '300px'}" layout="vertical">
+        <ng-template>
+          <p-card>
+            <div class="main__top_content_pane">
+              <app-transport-calls-table></app-transport-calls-table>
+            </div>
+          </p-card>
+        </ng-template>
+
+        <div class="main__spaceInnerComponent, main__spaceBetween" style=" min-width: 1200px">
+        </div>
+        <ng-template>
+          <p-card>
+
+            <div class="main__bottom_content_pane">
+              <app-timestamp-table (timeStampDeletedNotifier)="timestampDeletedHandler($event)"
+                                   (timeStampAcceptNotifier)="timestampRespondedHandler($event)"
+                                   [vesselId]="vesselId"
+              ></app-timestamp-table>
+              <div class="stickyFooterDiv">
+                <!-- <app-timestamp-editor (timeStampAddedNotifier)="timeStampAddedHandler($event)"
+                                      [portOfCall]="portOfCall"
+                                      [vesselId]="vesselId" [vesselSavedId]="vesselSavedId">
+                </app-timestamp-editor> -->
+                <app-timestamp-paginator [portCallTimeStampAdded]="portCallTimeStampAdded"
+                                         [portCallTimeStampDeleted]="portCallTimeStampDeleted"
+                                         [portCallTimeStampResponded]="portCallTimeStampResponded"
+                                         [portOfCall]="portOfCall"
+                                         [vesselId]="vesselId">
+                </app-timestamp-paginator>
+              </div>
+            </div>
+          </p-card>
+        </ng-template>
+      </p-splitter>
+    </div>
   </div>
 </div>
+
+
