--- a/ui/src/app/view/app.component.scss
+++ b/ui/src/app/view/app.component.scss
@@ -16,7 +16,7 @@
   }
 
   &__spaceBetween {
-    margin-bottom: 8px;
+    margin-bottom: 5px;
   }
 
   &__spaceInnerComponent {
@@ -35,13 +35,34 @@
     flex-direction: row;
     justify-content: space-evenly;
     width: 100%;
-    padding: 5px 10px 5px 10px;
+    padding: 5px 0px 5px 0px;
+  }
+
+  &__content{
+    height: 80vh;
+    position: absolute;
+  }
+
+  &__top_content_pane{
+    height: 39vh;
+    overflow: scroll;
+  }
+
+  &__bottom_content_pane{
+    height: 39vh;
+    overflow: scroll;
   }
 
 }
 
+.fullWidthAndHeight {
+  width: 100%;
+  height: auto;
+}
 
-
+.rightSpace {
+  margin-right: 10px;
+}
 
 root {
   font-size: 4px;
