--- a/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
+++ b/ui/src/app/view/transport-calls-table/transport-calls-table.component.html
@@ -1,11 +1,7 @@
-<p-table styleClass="p-datatable-sm">
+<p-table styleClass="p-datatable-sm" [value]="transportCall" [(selection)]="selectedtransportCall" selectionMode="single" dataKey="transportCallId"
+         (onRowSelect)="selectTransportCall($event)">
   <ng-template pTemplate="caption">
     {{'general.transportCall.label' | translate}}
-    <div class="tableHeader__cards">
-      <app-schedule-selector class="rightSpace fullWidthAndHeight"></app-schedule-selector>
-      <app-port-of-call class="rightSpace fullWidthAndHeight" (portOfCallNotifier)="portOfCallChangedHandler($event)"></app-port-of-call>
-      <app-vessel class="fullWidthAndHeight" (vesselNotifier)="vesselChangedHandler($event)" (vesselSavedNotifier)="vesselSavedHandler($event)"></app-vessel>
-    </div>
     <div class="p-grid">
       <div class="p-col"></div>
       <div class="p-col"></div>
@@ -24,10 +20,10 @@
       </div>
     </div>
   </ng-template>
-  <ng-template pTemplate="header">
+  <ng-template pTemplate="header" >
     <tr>
       <th style="width:10%">{{'general.transportCall.table.id' | translate}}</th>
-      <th style="width:10%">{{'general.transportCall.table.carrierServiceCode.label' | translate}}</th>
+      <th style="width:8%">{{'general.transportCall.table.carrierServiceCode.label' | translate}}</th>
       <th style="width:10%">{{'general.transportCall.table.vesselImo.label'| translate}}</th>
       <th style="width:15%">{{'general.transportCall.table.vesselName.label'| translate}}</th>
       <th style="width:10%">{{'general.transportCall.table.carrierVoyageNumber.label'| translate}}</th>
@@ -38,30 +34,18 @@
       <th style="width:10%">{{'general.transportCall.table.facilityCode.label'| translate}}</th>
     </tr>
   </ng-template>
-  <ng-template pTemplate="body">
-    <tr>
-      <td>8b64d20b-523b-4491-b2e5-32cfa5174eee</td>
-      <td>Y6S</td>
-      <td>9466960</td>
-      <td>NORTHERN JASPER</td>
-      <td>2007W</td>
-      <td>ITGOA</td>
-      <td>Genoa</td>
-      <td>3</td>
-      <td>TERM</td>
-      <td>ITGOAASEA</td>
-    </tr>
-    <tr>
-      <td>8b64d20b-523b-4491-b2e5-32cfa5174eee</td>
-      <td>Y6S</td>
-      <td>9466960</td>
-      <td>NORTHERN JASPER</td>
-      <td>2007W</td>
-      <td>ITGOA</td>
-      <td>Genoa</td>
-      <td>3</td>
-      <td>TERM</td>
-      <td>ITGOAASEA</td>
+  <ng-template pTemplate="body" let-transportCall let-rowIndex="rowIndex">
+    <tr  [pSelectableRow]="transportCall" [pSelectableRowIndex]="rowIndex">
+      <td>{{transportCall.transportCallID}}</td>
+      <td>{{transportCall.carrierServiceCode}}</td>
+      <td>{{transportCall.vesselIMONumber}}</td>
+      <td>{{transportCall.vesselName}}</td>
+      <td>{{transportCall.carrierVoyageNumber}}</td>
+      <td>{{transportCall.UNLocationCode}}</td>
+      <td>{{transportCall.UNLocationName}}</td>
+      <td>{{transportCall.transportCallNumber}}</td>
+      <td>{{transportCall.facilityTypeCode}}</td>
+      <td>{{transportCall.facilityCode}}</td>
     </tr>
   </ng-template>
 </p-table>
