--- a/ui/src/app/view/app.component.scss
+++ b/ui/src/app/view/app.component.scss
@@ -45,11 +45,13 @@
 
   &__top_content_pane{
     height: 39vh;
+    width: 98vw;
     overflow: scroll;
   }
 
   &__bottom_content_pane{
     height: 39vh;
+    width: 98vw;
     overflow: scroll;
   }
 
