--- a/ui/src/app/view/timestamp-table/timestamp-table.component.scss
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.scss
@@ -30,6 +30,17 @@
 .dateTimeStamp {
 }
 
+.dummyContent{
+   width: 98vw;
+   margin-top: 100px;
+   text-align: center;
+   font-size: 16pt;
+   color: $darkGrey;
+   font-family: Tahoma, sans-serif;
+
+
+}
+
 .timestampContent{
   font-size:$tableSize;
   z-index: 1;
