--- a/ui/src/app/view/timestamp-table/timestamp-table.component.scss
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.scss
@@ -58,6 +58,11 @@
     margin: 5px 10px 0px 0px;
   }
 
+  &__add_button {
+    height: 25px;
+    width: 25px;
+  }
+
 }
 
 .unreadTimestamp{
@@ -73,3 +78,6 @@
   color: #929292;
   text-shadow: none;
 }
+
+
+
