--- a/ui/src/app/view/transport-calls-table/transport-calls-table.component.scss
+++ b/ui/src/app/view/transport-calls-table/transport-calls-table.component.scss
@@ -1,3 +1,20 @@
+@import "DCSA-Theme";
+
+:host ::ng-deep .p-datatable .p-datatable-thead > tr > th {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+}
+.globalSearch {
+  float: right;
+  height: 40px;
+  padding: 3px 5px 3px 0px;
+
+  i {
+    padding-top: 3px !important;
+  }
+}
+
 .tableHeader {
   display: flex;
   flex-direction: row;
