--- a/ui/src/app/view/header/header.component.html
+++ b/ui/src/app/view/header/header.component.html
@@ -2,15 +2,15 @@
   <div class="p-col-1">
     <img class="header__logo" src="assets/DCSA_logo_color_on_dark_background.png">
   </div>
-  <div class="p-col-1"></div>
   <div class="p-col-3 header__menuEntryDiv" >
-    <p-button (click)="showInstructions()" label="{{ 'general.instructions.label' | translate }}"
-            class="p-button-text p-button-secondary header__menuEntry" icon="pi pi-question" type="button">
-    </p-button>
-    <p-button (click)="showDownloadRequest()" type="button" label="{{ 'general.download.timestamps.label' | translate }}"
-            class="p-button-text p-button-secondary header__menuEntry" icon="pi pi-download">
-    </p-button>
+    <button type="button" pButton pRipple icon="pi pi-bars" label="Menu" (click)="menu.toggle($event)"></button>
+    <p-menu #menu [popup]="true" [model]="helpMenu"></p-menu>
   </div>
+  <div class="p-col-1">
+
+
+  </div>
+
   <div class="p-col-1 header__menuLabel">
     <span>{{ 'general.port.call' | translate }}</span>
   </div>
