P6-138 refactored timestamp editor

--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.scss
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.scss
@@ -1,5 +1,6 @@
 @import "DCSA-Theme";
 
+
 p-dropdown::ng-deep {
   .dropdown {
     width: 100%;
@@ -35,6 +36,8 @@ p-dropdown::ng-deep {
   font-size: $tableSize !important;
 }
 
-.timestampContent {
-
+.headline{
+  margin-bottom: 30px;
 }
+
+
