--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -16,9 +16,9 @@
         : {{transportCallSelected.transportCallID}}</div>
       <div class="p-col tableHeader">
         <div class="tableHeader__buttons">
-          <p-button class="p-button-raised p-button-rounded tableHeader__add_button"
+          <p-button class="p-button-raised p-button-rounded tableHeader__add_button" (onClick)="showCreationDialog()"
                     icon="pi pi-plus" pTooltip="{{ 'general.table.header.create.tooltip' | translate }}"
-                    tooltipPosition="top" type="button"
+                    tooltipPosition="left" type="button"
                     tooltipStyleClass="ToolTipClass"></p-button>
         </div>
       </div>
@@ -162,9 +162,9 @@
       <td style="width: 6%"
           [ngClass]="timestamp.outdatedMessage ?  'disabledRow' : timestamp.uiReadByUser? 'timestampContent' : 'unreadTimestamp'  ">
         <!--   somehow there is a porblem acessing the terminals   -->
-        <div *ngIf="terminals.length > 0">
-          <div pTooltip="{{(timestamp.terminal | terminalIdToTerminal: terminals).terminalName}}" tooltipPosition="top"
-               tooltipStyleClass="ToolTipClass">{{ (timestamp.terminal | terminalIdToTerminal: terminals).smdgCode}}</div>
+        <div *ngIf="timestamp.terminal != null">
+          <div pTooltip="{{timestamp.terminal.terminalName}}" tooltipPosition="top"
+               tooltipStyleClass="ToolTipClass">{{timestamp.terminal.smdgCode}}</div>
         </div>
       </td>
       <td style="width: 7%"
